--- a/source/6. Tournament.rst
+++ b/source/6. Tournament.rst
@@ -163,9 +163,9 @@
 - 记录讨论的内容以供回顾
 - 帮忙改演示文稿
 
-要知道主控很忙，使用文本（小纸条）进行提示应当是主要的方式，只有非常紧急的消息才适合用声音传递给主控 [*]_ 。队伍可能需要一个网络连接跨越物理位置的障碍来快速传递文本，这将是非主控队员之间的主要交流方式。
+要知道主控很忙，使用文本（小纸条）进行提示应当是主要的方式，只有非常紧急的消息才适合用声音传递给主控 [#]_ 。队伍可能需要一个网络连接跨越物理位置的障碍来快速传递文本，这将是非主控队员之间的主要交流方式。
 
-[*] 有人指出，IYPT和CUPT实际上都不允许使用声音交流！在CUPT和IYPT的规则文件上找不到这一条，但各届CUPT的手册上都会添加一条 *似乎* 是这个意思的陈述。此外，据说有CUPT裁判主席阻止非主控队员说话的案例。
+.. [#] 有人指出，IYPT和CUPT实际上都不允许使用声音交流！在CUPT和IYPT的规则文件上找不到这一条，但各届CUPT的手册上都会添加一条 *似乎* 是这个意思的陈述。此外，据说有CUPT裁判主席阻止非主控队员说话的案例。
 
 ^^^^^^^^^^^^^^^^^^
 关于队伍
@@ -174,7 +174,7 @@
 
 每一阶段的成绩由多位裁判给出，由 :math:`((\text{最高分}+\text{最低分})/2+\text{其他分数})/(\text{裁判数}-1)` 计算，即极端分数权重减半的平均分。每一轮的成绩由三个阶段（角色）的成绩给出： :math:`\text{正方得分}\times 3+\text{反方得分}\times 2+\text{评论方得分}`，其中正方得分所占权重可能因为进行过多拒绝降低。
 
-在一支队伍的全部比赛中正方对于可供挑战的题目，总计可以拒绝 **3** 次而不被扣分，之后每拒绝一次则从正方的基础加权系数 3 中扣去 **0.2** ，这个惩罚作用于所有轮次的分数。累计拒绝 **6** 次，将不计名次，不参与评奖。[1]_
+在一支队伍的全部比赛中正方对于可供挑战的题目，总计可以拒绝 **3** 次而不被扣分，之后每拒绝一次则从正方的基础加权系数 3 中扣去 **0.2** ，这个惩罚作用于所有轮次的分数。累计拒绝 **6** 次，将不计名次，不参与评奖。[#]_
 
 反方可以向正方挑战任何一道题目，但有以下情况除外：
 
@@ -190,9 +190,9 @@
 
 每轮比赛前，队伍应当结合手上的对阵图和选题情况表分析可能会做那些题目的正/反/评，进行进一步的准备（比如回顾之前准备好的笔记），尤其是要考虑好反方挑战什么题目。
 
-由于正方分数加权系数高、且高度依赖于赛前实验研究的积累，通常会有避免做得不好的题目被挑战的需要，除了使用有限次数的拒绝权以外，利用规则也有希望做到这一点：如果你们的队伍作反方在作正方之前，那么你可以挑战你想要“保护”的题目。如果挑战成功，作正方时你们不可能被挑战这题。但按照规则，有时你不能挑战这题。
+由于正方分数加权系数高、且高度依赖于赛前实验研究的积累，通常会有避免做得不好的题目被挑战的需要。除了使用有限次数的拒绝权以外，利用规则也有希望做到这一点：如果你们的队伍作反方在作正方之前，那么你可以挑战你想要“保护”的题目。如果挑战成功，作正方时你们不可能被挑战这题。不过，有时规则不允许你挑战这题。
 
-.. [1] 这些规则中的数值可能与当届比赛的真实情况不同，国赛、区域赛、省赛的取值往往也是不同的。
+.. [#] 这些规则中的数值可能与当届比赛的真实情况不同，国赛、区域赛、省赛的取值往往也是不同的。
 
 ^^^^^^^^^^^^^^
 进攻性策略
