Update Presentation & add blank Part.4

--- a/source/7. Tournament.rst
+++ b/source/7. Tournament.rst
@@ -227,6 +227,42 @@
 
 	- 给出的图表应当含义清晰，标注有表头、曲线颜色的含义、坐标轴代表的物理量等等，否则此图往往会无法提供任何可以理解的信息
 
+	- 一类严格的内容安排思路是：
+
+		* 立意陈述与研究方法简介
+			#. 题目介绍与分析
+			#. 表明要弄清楚的对象 [#]_
+			#. 简述采用的研究方法
+
+		* 具体问题的分析与实证
+			#. 提出问题
+			#. 理论分析
+			#. 实验方案设计
+			#. 实验数据分析
+			#. 理论-实验比较
+			#. 得出结论并评价理论模型和实验方案的合理性（比如：分析近似带来的理论计算误差、实验测量方法存在的系统误差等）
+			#. 如果还研究了其他问题，则回到1.重复以上步骤
+
+		* 工作成果总结
+			#. 给出所有可靠的结论
+			#. 对于不可靠、有矛盾的结论，从理论模型和实验方案着手解释，并尝试提出改进方案
+
+	- 另一类“讲故事”风格的思路是：
+
+		#. 给出题目
+		#. 介绍实验装置和直观的实验现象
+		#. 指出其中特别之处
+		#. 进行简易的理论分析并给出一个定性的猜想
+		#. 进行精细的理论分析来预测结果
+		#. 介绍改进了的实验装置并展示实验数据
+		#. 比较理论-实验结果并解释其中差异的来源（也是在提出新的问题）
+		#. 指出更特别的地方（如果存在），回到3.
+		#. 总结探索的历程以及得到的结果
+
+	- 关于语言风格特色……
+		
+.. [#] 一定要事先思考你的题意理解是不是主流的、是不是可被默认的，否则你就必须现场详细阐述你的理解，否则听众将以他们原有的印象理解乃至误解你的目标和动机、误解你所用的词汇的含义。
+
 *这部分仍在开发*
 
 
