--- a/source/Physics/Mathematics and Physics.tex
+++ b/source/Physics/Mathematics and Physics.tex
@@ -69,13 +69,37 @@
 			\subsection{对称性破缺}
 				上述的对称性原理似乎存在漏洞。一只削尖的轴对称的铅笔放在桌面上，它必然会倒下，但它倒下之后将指向一个特定的方向，而这个方向的非对称性是对称的直立状态所不具有的。
 
-				实际上，如果上述系统真的是轴对称的，那么便铅笔便不会倒下。生活中铅笔会倒下是因为桌面不水平、不光洁，因为铅笔不竖直、质量分布不严格轴对称、接触面不严格轴对称，因为环境扰动不是严格轴对称的。而倒立铅笔这个系统处于所谓的不稳平衡点的附近，从而这些微小的、不易区分的非对称将导致系统演化结果的显著非对称。这一现象称为\textbf{明显对称性破缺}。
+				实际上，如果上述系统真的是轴对称的，那么便铅笔便不会倒下。生活中铅笔会倒下是因为桌面不水平、不光洁，因为铅笔不竖直、质量分布不严格轴对称、接触面不严格轴对称，因为环境扰动不是严格轴对称的。而倒立的铅笔处于所谓的不稳平衡态的附近，从而这些微小的、不易区分的非对称将导致系统演化结果的显著非对称。这一现象称为\textbf{明显对称性破缺}。
 
 				还有一类情况：一个具有严格对称性的系统，从理论\footnote{如量子理论。}机制上可以自然地给出非对称的结果，这种情况称为\textbf{自发对称性破缺}。
 
 				CPT变换as footnote？
 
 		\section{量纲}
+			\subsection{物理量与单位制}
+				在自然界中，具有这种性质的物理量是普遍存在的：一系列类似而不同的测量方法给出的数值结果可以相互推知，也就是说被测量的并非是独立的物理量，而是只需选取某一个特定方法去测量就足够了。比如：用一系列刻度不同的尺子去量某个线条的长度，得到的结果各不相同，但你一定知道如何去换算它们，所以你只需要某一把特定合适、方便的尺子就够了。所以我们不将不同尺子测得的长度称为是不同的物理量，而是赋予一个“长度”的名字作为统称。
+
+				%事情还没有那么简单，为何这种非独立性要用、可以用伸缩变换去描述？以长度为例解说它吧。
+				
+				还是有很多情况下我们需要进行数值的转换，而测量结果的数值与测量方式有关，所以在记录测量结果的数值的同时还要记录测量方式。被记录的“刻度”就是所谓的\textbf{单位}。
+
+				现在我们可以换一个说法来描述这种性质：单位制选取的不同不对应不同的物理事实。你选取不同的刻度尺去丈量土地得到不同的数值，但土地终归就是那么大。
+			
+			\subsection{放缩不变性}
+				我们所研究的物理量往往都是像长度那样在不同单位制下数值大小不同的、由一系列不独立的物理量统合而来的物理量。
+				由于，我们所提出的关于这样的物理量的数值的规律应当对不同单位制下的数值都成立，也就是要求：
+				\begin{enumerate}
+					\item 物理公式在某一单位制下成立。
+					\item \textbf{放缩不变性}：在物理公式中，依赖于同一单位制的同一类物理量的取值同时放大/缩小某个倍数后，原来成立的公式应当仍然成立。
+				\end{enumerate}
+				
+				以最简单的公式\(y=f(x)\)为例，其中函数\(f\)给出了由物理量\(x\)推知物理量\(y\)的方法。现在要求它具有放缩不变性，那么也就是说
+				\[\frac{f\left( x^\prime \right)}{f\left( x \right)}=\frac{f\left( \alpha x \right)}{f\left( x \right)}\]%？？？
+				
+
+
+
+
 			放缩不变性、量纲、Pi定理、算核弹。
 
 
@@ -85,7 +109,7 @@
 		介绍不予证明但以示例解说的重要命题，让读者将它们作为武器来用。实际上同时也能为读者今后的数学理论学习提供兴趣背景。
 		
 		\section{偏微分方程的分离变量法}
-		\section{二阶常微分方程}
+		\section{二阶线性常微分方程}
 		\section{Fourier变换}
 		\section{近似}
 		\section{微扰}
@@ -94,5 +118,8 @@
 		\section{数值计算原理}
 		\section{测量不确定度}
 		\section{拟合}
+			\begin{remark}
+				``With four parameters I can fit an elephant, and with five I can make him wiggle his trunk.'' ——John von Neumann
+			\end{remark}
 
 \end{document}
