comment&listening theory

--- a/source/7. Tournament.rst
+++ b/source/7. Tournament.rst
@@ -276,11 +276,18 @@
 
 .. image:: image/SampleTable.png
 
-如果对方做得好，你也比较了解问题，那么讨论环节就是一个寻找“爆点”的过程：只怕讨论的话题太平凡太琐碎抓不住眼球，绝不怕在一个问题上太过深入；如果对方做得一般，你却很了解问题，那么讨论环境就是“带娃”的过程，可以基于对方的研究引导对方给出切实可行有效的改进方法，也可以对对方遗漏的关键问题进行理论上深入的讨论，但不要被对方拖了时间、失去发挥机会；如果对方做得很好，你却摸不着头脑，你至少可以先针对对方的工作逐一讨论、展开细节，在这个过程中寻找值得讨论的问题，期间如果有不懂的地方，问正方就好了；如果双方都比较菜，那一般是谁有气势有条理谁就赢。
+听对方介绍理论时，要把对方的介绍“封装”起来。始终关注以下问题：对方采用什么方法？此方法允许他从什么推导出什么？推导所需的条件是否是实验测量的还是需要查表/经验估计/拟合？推导出的结果有何意义、同题目所要求的任务目标有和联系？
 
-如果你对题目比较了解，那么你应当准备一些有深度的问题，并且准备好同对手深入讨论它们。
+对于理论方法的细节，如果对方没有详述而你又不熟悉这一套，你可以通过一些极端情况的例子来检验其正确性（如假设时间无穷大、质量足够小等等）。
 
 *这部分仍在开发*
+
+^^^^^^^^^^^^^
+讨论
+^^^^^^^^^^^^^
+如果你对题目比较了解，那么你应当准备一些有深度的问题，并且准备好同对手深入讨论它们。
+
+如果对方做得好，你也比较了解问题，那么讨论环节就是一个寻找“爆点”的过程：只怕讨论的话题太平凡太琐碎抓不住眼球，绝不怕在一个问题上太过深入；如果对方做得一般，你却很了解问题，那么讨论环境就是“带娃”的过程，可以基于对方的研究引导对方给出切实可行有效的改进方法，也可以对对方遗漏的关键问题进行理论上深入的讨论，但不要被对方拖了时间、失去发挥机会；如果对方做得很好，你却摸不着头脑，你至少可以先针对对方的工作逐一讨论、展开细节，在这个过程中寻找值得讨论的问题，期间如果有不懂的地方，问正方就好了；如果双方都比较菜，那一般是谁有气势有条理谁就赢。
 
 ^^^^^^^^^^^^^
 评
@@ -291,6 +298,6 @@
 
 此外，如果你能将混乱的研究报告和学术讨论的来龙去脉整理得十分清楚，我想你会因此挣得分数的。
 
-值得强调的是，评论方的评论应当有别于反方的报告。主控应当高屋建瓴地看待问题，考虑到题意理解中的种种可能而不是仅限于正方已有的研究工作，要对之前环节中遗漏的关键问题进行补充，回顾总结整个研究所得到的结论内容以及影响结论说服力的支持性证据和方法性错误。
+值得强调的是，评论方的评论应当有别于反方的报告。主控应当高屋建瓴地看待问题，考虑到题意理解中的种种可能而不是仅限于正方已有的研究工作，要对之前环节中遗漏的关键问题进行补充，回顾总结整个研究所得到的结论内容以及影响结论说服力的支持性证据和方法性错误。评论方应回归现象本质，简明深刻地阐述现象原理，你还可以顺便还能拿来考验正反方，他们若是没答出来便是祭了你的旗。
 
 *这部分仍在开发*
