principle: be objective

--- a/source/7. Tournament.rst
+++ b/source/7. Tournament.rst
@@ -301,3 +301,12 @@
 值得强调的是，评论方的评论应当有别于反方的报告。主控应当高屋建瓴地看待问题，考虑到题意理解中的种种可能而不是仅限于正方已有的研究工作，要对之前环节中遗漏的关键问题进行补充，回顾总结整个研究所得到的结论内容以及影响结论说服力的支持性证据和方法性错误。评论方应回归现象本质，简明深刻地阐述现象原理，你还可以顺便还能拿来考验正反方，他们若是没答出来便是祭了你的旗。
 
 *这部分仍在开发*
+
+---------------
+基本原则：客观
+---------------
+既然是学术讨论，那么讨论应立足客观事实，这是一个根本原则。不要为了立刻给出一个解释而作任何自己都无法确信的陈述。如果不得不这样做，你须分析并指出自己陈述中的缺陷。我多次见到赛场上出现这样的情况，自己也曾多次犯过这样的错误。
+
+可惜的是，实际赛场上的评分往往受到“气势”和“自信程度”的感性印象的不少影响，而并不是以陈述的事实正确与含义明晰为唯一判据的。这种价值取向会抑制审慎思考而促进强词夺理。“客观”这样一个基本的要求的实现，现在竟算得上是个奢侈的理想。
+
+加强自身学术水平，提高学术品德，从自己做起、从每一句话做起。
