--- a/source/7. Tournament.rst
+++ b/source/7. Tournament.rst
@@ -305,8 +305,10 @@
 ---------------
 基本原则：客观
 ---------------
-既然是学术讨论，那么讨论应立足客观事实，这是一个根本原则。不要为了立刻给出一个解释而作任何自己都无法确信的陈述。如果不得不这样做，你须分析并指出自己陈述中的缺陷。我多次见到赛场上出现这样的情况，自己也曾多次犯过这样的错误。
+既然是学术讨论，那么讨论应立足客观事实，这是一个根本原则。
 
-可惜的是，实际赛场上的评分往往受到“气势”和“自信程度”的感性印象的不少影响，而并不是以陈述的事实正确与含义明晰为唯一判据的。这种价值取向会抑制审慎思考而促进强词夺理。“客观”这样一个基本的要求的实现，现在竟算得上是个奢侈的理想。
+不要为了立刻给出一个解释而作任何自己都无法确信的陈述。如果不得不这样做，你须分析并指出自己陈述中的缺陷，了解分别在什么情况下该陈述是正确或错误的。我多次见到赛场上出现这样“强词夺理”的情况，自己也曾多次犯过这样的错误。可惜的是，实际赛场上的评分往往受到“气势”和“自信程度”的感性印象的不少影响，而并不是以陈述的事实正确与含义明晰为唯一判据的。这种价值取向会抑制审慎思考而促进强词夺理。“客观”这样一个基本的要求的实现，现在竟算得上是个奢侈的理想。
+
+不过也不要因为害怕讲错而拒绝讨论，你可以只是提出正确的命题，其条件的成立与否可以是待定的。
 
 加强自身学术水平，提高学术品德，从自己做起、从每一句话做起。
